build/deployment/rrhh/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-recursos
  namespace: recursos
spec:
  replicas: 1
  selector:
    matchLabels:
      run: laravel-recursos
  template:
    metadata:
      labels:
        run: laravel-recursos
    spec:
      containers:
      - name: laravel-recursos
        image: docker-php73:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 443
        volumeMounts:
            - mountPath: "/var/www/html"
              name: vol-recursos
      volumes:
        - name: vol-recursos
          persistentVolumeClaim:
            claimName: recursos-mineco
