build/deployment/rrhh/service.yml
apiVersion: v1
kind: Service
metadata:
  name: laravel-recursos
spec:
  type: NodePort
  selector:
    run: laravel-recursos
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31004
